--- a/style.css
+++ b/style.css
@@ -14,14 +14,14 @@ h1 {
 }
 
 button {
-    background-color: #fdc886;
+    background-color: #cb80a3;
     padding: 0.5rem 1.2rem;
     font-size: 1.1rem;
     font-family: 'Work Sans', sans-serif;
     font-weight: 500;
     border-radius: 0.3rem;
     margin: 0.5rem auto 1.5rem;
-    border: 2px solid #fdc886;
+    border: 2px solid #cb80a3;
     border-radius: 0.5rem;
     line-height: 1.1rem;
     cursor: pointer;
@@ -34,14 +34,14 @@ button:hover {
 }
 
 button:active {
-    background-color: #dea764;
+    background-color: #cb80a3;
     transition: all 0.15s ease-in-out;
-    border: 2px solid #dea764;
+    border: 2px solid #cb80a3;
 }
 
 button:focus {
     outline: none;
-    border: 2px solid #dea764;
+    border: 2px solid #cb80a3;
 }
 
 button:disabled {
@@ -121,7 +121,7 @@ input[type='color'] {
 
 input[type='color']:focus {
     outline: none;
-    border: 2px solid #dea764;
+    border: 2px solid #cb80a3;
     border-radius: 2px;
 }
 
@@ -169,7 +169,7 @@ input[type='text'] {
 
 input[type='text']:focus {
     outline: none;
-    border: 1px solid #dea764;
+    border: 1px solid #cb80a3;
 }
 
 input[type='range'] {
@@ -188,35 +188,35 @@ input[type='range']::-webkit-slider-thumb {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background: #fdc886;
+    background: #cb80a3;
     cursor: pointer;
     -webkit-transition: background 0.15s ease-in-out;
     transition: background 0.15s ease-in-out;
 }
 input[type='range']::-webkit-slider-thumb:hover {
-    background: #dea764;
+    background: #cb80a3;
 }
 input[type='range']:active::-webkit-slider-thumb {
-    background: #dea764;
+    background: #cb80a3;
 }
 input[type='range']::-moz-range-thumb {
     width: 20px;
     height: 20px;
     border: 0;
     border-radius: 50%;
-    background: #fdc886;
+    background: #cb80a3;
     cursor: pointer;
     -moz-transition: background 0.15s ease-in-out;
     transition: background 0.15s ease-in-out;
 }
 input[type='range']::-moz-range-thumb:hover {
-    background: #dea764;
+    background: #cb80a3;
 }
 input[type='range']:active::-moz-range-thumb {
-    background: #dea764;
+    background: #cb80a3;
 }
 input[type='range']:focus::-webkit-slider-thumb {
-    box-shadow: 0 0 0 3px #fff, 0 0 0 5px #dea764;
+    box-shadow: 0 0 0 3px #fff, 0 0 0 5px #cb80a3;
 }
 
 ::-moz-range-track {
@@ -238,19 +238,19 @@ input[type='radio'] {
     height: 15px;
     padding: 2px;
     background-clip: content-box;
-    border: 1px solid #fdc886;
+    border: 1px solid #cb80a3;
     background-color: #ffffff;
     border-radius: 50%;
 }
 
 input[type='radio']:checked {
-    background-color: #fdc886;
+    background-color: #cb80a3;
 }
 
 input[type='radio']:focus {
     outline: none;
-    border: 2px solid #dea764;
-    background-color: #dea764;
+    border: 2px solid #cb80a3;
+    background-color: #cb80a3;
 }
 
 fieldset {
